test/cases/extern_variable_has_no_type.0.zig
comptime {
    const x = foo + foo;
    _ = x;
}
extern var foo: i32;

// error
//
// :2:15: error: cannot load runtime value in comptime block
